# buzzomation_raspberry_client

./: .dockerignore  Dockerfile  Dockerfile.cli  Dockerfile.gui  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
cli/: cli.py  requirements.txt
gui/: app.py
raspberry_buzzer/cli/: __main__.py  main.py  requirements.txt
raspberry_buzzer/gui/: app.py  player_config.json  requirements.txt
src/: __init__.py  buzzer_monitor.py  game_api.py  gpio_handler.py  player_manager.py
